--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,9 @@
     "build": "tsc -p ./"
   },
   "dependencies": {
-    "express": "^4.17.1"
+    "apollo-server-express": "^2.19.1",
+    "express": "^4.17.1",
+    "graphql": "^15.4.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
