--- a/server/package.json
+++ b/server/package.json
@@ -2,19 +2,23 @@
   "name": "tinyhouse-v1-server",
   "version": "0.1.0",
   "scripts": {
-    "start": "nodemon src/index.ts",
-    "build": "tsc -p ./"
+    "start": "nodemon -r dotenv/config src/index.ts",
+    "build": "tsc -p ./",
+    "seed": "ts-node temp/seed.ts"
   },
   "dependencies": {
     "apollo-server-express": "^2.19.1",
     "express": "^4.17.1",
-    "graphql": "^15.4.0"
+    "graphql": "^15.4.0",
+    "lodash.merge": "^4.6.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
+    "@types/lodash.merge": "^4.6.6",
     "@types/node": "^14.14.20",
     "@typescript-eslint/eslint-plugin": "^4.12.0",
     "@typescript-eslint/parser": "^4.12.0",
+    "dotenv": "^8.2.0",
     "eslint": "^7.17.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
