--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "es6",
     "module": "commonjs",
     "rootDir": "./src",
-    "outDir": "./buid",
+    "outDir": "./build",
     "esModuleInterop": true,
     "strict": true
   }
