--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "tinyhouse-v1-server",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "start": "nodemon -r dotenv/config src/index.ts",
     "build": "tsc -p ./",
