--- a/server/package.json
+++ b/server/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "apollo-server-express": "^2.19.1",
     "express": "^4.17.1",
+    "googleapis": "^92.0.0",
     "graphql": "^15.4.0",
-    "lodash.merge": "^4.6.2"
+    "lodash.merge": "^4.6.2",
+    "mongodb": "^4.2.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
