--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.19.1",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "googleapis": "^92.0.0",
     "graphql": "^15.4.0",
@@ -17,6 +18,7 @@
     "mongodb": "^4.2.2"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/lodash.merge": "^4.6.6",
     "@types/node": "^14.14.20",
