--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "googleapis": "^92.0.0",
     "graphql": "^15.4.0",
     "lodash.merge": "^4.6.2",
-    "mongodb": "^4.2.2"
+    "mongodb": "^4.2.2",
+    "stripe": "^10.0.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
