--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "apollo-server-express": "^2.19.1",
+    "cloudinary": "^1.30.1",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "googleapis": "^92.0.0",
