--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,9 @@
 {
   "name": "tinyhouse-v1-server",
   "version": "0.1.0",
+  "engines": {
+    "node": "16.14.2"
+  },
   "private": true,
   "scripts": {
     "start": "nodemon -r dotenv/config src/index.ts",
@@ -12,15 +15,17 @@
     "@googlemaps/google-maps-services-js": "^3.3.16",
     "apollo-server-express": "^2.19.1",
     "cloudinary": "^1.30.1",
+    "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "googleapis": "^92.0.0",
     "graphql": "^15.4.0",
     "lodash.merge": "^4.6.2",
-    "mongodb": "^4.2.2",
+    "mongodb": "^4.3.0",
     "stripe": "^10.0.0"
   },
   "devDependencies": {
+    "@types/compression": "^1.7.2",
     "@types/cookie-parser": "^1.4.2",
     "@types/express": "^4.17.9",
     "@types/lodash.merge": "^4.6.6",
