--- a/client/package.json
+++ b/client/package.json
@@ -15,19 +15,14 @@
     "@apollo/client": "^3.6.9",
     "@stripe/react-stripe-js": "^1.10.0",
     "@stripe/stripe-js": "^1.35.0",
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.3",
-    "@testing-library/user-event": "^12.6.2",
-    "@types/react": "^17.0.48",
-    "@types/react-dom": "^17.0.17",
     "antd": "^4.11.2",
     "graphql": "^15.5.0",
+    "jest": "^28.1.3",
     "moment": "^2.29.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^5.0.0",
-    "typescript": "^4.1.3",
     "web-vitals": "^0.2.4"
   },
   "eslintConfig": {
@@ -53,6 +48,13 @@
     "graphql": "$graphql"
   },
   "devDependencies": {
-    "apollo": "^2.34.0"
+    "@apollo/react-testing": "^4.0.0",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.3",
+    "@testing-library/user-event": "^12.6.2",
+    "@types/react-dom": "^17.0.17",
+    "@types/react": "^17.0.48",
+    "apollo": "^2.34.0",
+    "typescript": "^4.1.3"
   }
 }
